@@ -1,8 +1,12 @@
 2002-11-24  Miguel de Icaza  <miguel@ximian.com>
 
-	* cs-tokenizer.cs: Do not short-circuit, because if we do, we
+	* cs-tokenizer.cs (consume_identifier): Cut by half the number of
+	hashtable calls by merging the is_keyword and GetKeyword behavior.
+
+	Do not short-circuit, because if we do, we
 	report errors (ie, #if false && true would produce an invalid
 	directive error);
+	
 
 2002-11-24  Martin Baulig  <martin@ximian.com>
 
